// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should call onChange 1`] = `
<div>
  <div
    class="radio-group"
  >
    <label
      aria-checked="true"
      class="radio  mko_vo66cf-radio"
      for="jest-1"
    >
      <input
        checked=""
        class="radio__input  mko_vo66cf-radio__input"
        id="jest-1"
        name="jest"
        type="radio"
        value="1"
      />
      <span
        class="radio__label"
      >
        one
      </span>
    </label>
    <label
      aria-checked="false"
      class="radio  mko_vo66cf-radio"
      for="jest-2"
    >
      <input
        class="radio__input  mko_vo66cf-radio__input"
        id="jest-2"
        name="jest"
        type="radio"
        value="2"
      />
      <span
        class="radio__label"
      >
        two
      </span>
    </label>
    <label
      aria-checked="false"
      class="radio  mko_vo66cf-radio"
      for="jest-3"
    >
      <input
        class="radio__input  mko_vo66cf-radio__input"
        id="jest-3"
        name="jest"
        type="radio"
        value="3"
      />
      <span
        class="radio__label"
      >
        three
      </span>
    </label>
  </div>
</div>
`;

exports[`should render with minimum props 1`] = `
<div>
  <label
    aria-checked="false"
    class="radio  mko_vo66cf-radio"
    for="jest"
  >
    <input
      class="radio__input  mko_vo66cf-radio__input"
      id="jest"
      name="jest"
      type="radio"
      value="0"
    />
    <span
      class="radio__label"
    >
      jester
    </span>
  </label>
</div>
`;
